# OptimAIze

./: .gitignore  .gitmodules  ARCHITECTURE.md  BENCHMARKS.md  README.md  main.py  pyproject.toml
modules/OptimAIze-OCR/: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.web  README.md  docker-compose.yml  main.py  pyproject.toml
modules/OptimAIze-OCR/apps/api/optimaize_ocr_api/: main.py
modules/OptimAIze-OCR/apps/web/: index.html  nginx-main.conf  nginx.conf  package-lock.json  package.json
modules/OptimAIze-OCR/legacy/cli/: ocr_history.py
modules/OptimAIze-OCR/legacy/gradio/: app_ui.py
modules/OptimAIze-OCR/src/optimaize_ocr/: __init__.py  paths.py  runtime_policy.py
modules/OptimAIze-OCR/src/optimaize_ocr/backends/: __init__.py  base.py  (+7 more)
modules/OptimAIze-OCR/tests/: browser_test_app_ui.py  inspect_app_ui_dom.py  inspect_app_ui_ids.py  inspect_app_ui_textareas.py  test_app_ui.py
modules/OptimAIze-OCR/tools/benchmarks/: benchmark_multipage_docqa.py  benchmark_ocr_dataset.py  create_multidoc_qa_dataset.py  eval_vlm_on_falcon_crops.py  sweep_threads.py  test_dots_on_falcon_crops.py
modules/OptimAIze-OCR/tools/diagnostics/: check_strides.py  debug_clean_baseline.py  debug_int8.py  debug_patch_audit.py  dots_bisect_fp32.py  dots_no_patches.py  generate_test_image.py  profile_dots_small.py  test_dots_baseline.py  test_dots_optimized.py  test_import.py
modules/OptimAIze-OCR/tools/profiling/: bench.py  bench_layer_types.py  cprofile_decode.py  micro_bench.py  profile_decode.py  profile_decode_modules.py  profile_decode_step.py  profile_vision_blocks.py
(+83 files in other folders)
