[project]
name = "optimaize-ocr"
version = "0.1.0"
description = "OptimAIze-OCR child project: a modular CPU-optimized layout-aware OCR pipeline with its own CLI and UI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.9.1",
    "torchvision==0.24.1",
    "transformers==5.4.0",
    "huggingface_hub==1.5.0",
    "pillow==12.0.0",
    "safetensors==0.7.0",
    "einops==0.8.1",
    "tokenizers==0.22.1",
    "tqdm==4.67.1",
    "tyro==0.9.35",
    "numba==0.62.1",
    "numpy==2.3.5",
    "gradio==6.1.0",
    "fastapi==0.124.2",
    "uvicorn[standard]==0.38.0",
    "python-multipart==0.0.20",
    "pytest==9.0.2"
]

[tool.setuptools.packages.find]
where = ["src", "apps/api"]
include = ["optimaize_ocr*", "optimaize_ocr_api*"]
exclude = ["outputs*", "assets*", "weights*", "tools*", "tests*"]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"
